NotFound and Layout bugfix

--- a/src/scss/components/_Layout.scss
+++ b/src/scss/components/_Layout.scss
@@ -15,7 +15,7 @@
     background: $gray-strong;
   }
   &::-webkit-scrollbar-thumb:hover {
-    background-color: $primary-hover;
+    background-color: $primary-dark;
   }
 }
 
